# c_quantum_computer_simulation

./: .gitignore  CMakeLists.txt  Makefile  README.md  quantum_gates.h
app/: CMakeLists.txt
app/grovers_algorithm/: CMakeLists.txt  main.c
app/phase_estimation/: CMakeLists.txt  main.c
src/: CMakeLists.txt  complex_matrices.c  complex_matrices.h  complex_numbers.c  complex_numbers.h  qc_name_map.c  qc_name_map.h  quantum_computer_simulation.c  quantum_computer_simulation.h  qubit_gates.c  qubit_gates.h  qubits.c  qubits.h  qucircuit.c  qucircuit.h  qucircuit_context.c  qucircuit_context.h  qugate.c  qugate.h
src/complex_numbers/: CMakeLists.txt  complex_numbers.c  complex_numbers.h
src/qubits/: CMakeLists.txt  qubits.c  qubits.h  qubits_apply.c  qubits_apply.h
src/qucircuit/: CMakeLists.txt  qucircuit.c  qucircuit.h  qucircuit_apply.c  qucircuit_apply.h  qucircuit_context.c  qucircuit_context.h
src/qugate/: CMakeLists.txt  qugate.c  qugate.h  qugate_func.c  qugate_func.h  qugate_mat.c  qugate_mat.h
src/test/: complex_matrices_test.c  qubit_gates_test.c  qucircuit_test.c  qugate_test.c
test/: CMakeLists.txt
test/complex_numbers/: CMakeLists.txt  complex_numbers.test.c
test/qubits/: CMakeLists.txt  qubits.test.c  qubits_apply.test.c
test/qucircuit/: CMakeLists.txt  qucircuit.test.c  qucircuit_apply.test.c  qucircuit_context.test.c
test/qugate/: CMakeLists.txt  qugate.test.c  qugate_func.fourier_transform.test.c  qugate_func.test.c  qugate_mat.test.c
